8329108: [lworld] valhalla/valuetypes/ObjectMethods.java fails with default CDS archive