src/hotspot/cpu/x86/interp_masm_x86.cpp
@@ -1158,7 +1158,7 @@ void InterpreterMacroAssembler::remove_activation(
       Label skip_stress;
       movptr(rscratch1, Address(rbp, frame::interpreter_frame_method_offset * wordSize));
       movl(rscratch1, Address(rscratch1, Method::flags_offset()));
-      testl(rcx, ConstMethodFlags::has_scalarized_return_flag());
+      testl(rcx, MethodFlags::has_scalarized_return_flag());
       jcc(Assembler::zero, skip_stress);
       load_klass(rax, rax, rscratch1);
       orptr(rax, 1);
